--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  min-width: 100%;
-  width: 100%;
+  flex-direction: column;
+  min-width: 320px;
   min-height: 100vh;
 }
 
